# heterogeneous_soc_escalation

./: .gitignore  CMakeLists.txt  Makefile  README.md  common.mk  hijack.c  linecam.c  m4load.c  root.c
cmake/: CMakeLists.txt  root.c
firmware/: Makefile  escalation.c  imx8mq.c  root.c  stm32mp1.c
firmware/MIMX8MQ6/: MIMX8MQ6_cm4.h  fsl_iomuxc.h
firmware/STM32MP157C/: stm32mp157cxx_cm4.h
kernel_modules/find_proc/: Makefile  find_proc.c
kernel_modules/su/: Makefile  su.c
m4_code_injection/: Makefile  Readme.md  inject_instruction.c  injection_victim.stm32mp1.c
module/: Makefile  a.c  test.c  test2.c
process_privilege_escalation/: Makefile  escalation.c
tools/: Makefile  memdev.c  virtio_dump.c
